# dataqbs_IA

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff_report.json  .ruff_tally.py  .ruff_top20.json  .workspace_checks.ps1  CHANGELOG.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.4.1.md  RELEASE_NOTES_v0.4.2.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.5.1.md  RELEASE_NOTES_v1.0.0_GUILLERMO.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.6.0_FISHER.md  RELEASE_NOTES_v2.2.0-MEMO2.md  RELEASE_NOTES_v2.2.1-MEMO3.md  Rules.txt  config.yaml  context.txt  dataqbs_IA.code-workspace  extract_domains.py  migrate_suspicious.py  plan-dataqbsSite.prompt.md  profile_bf.prof  pyproject.toml  scalpin.yaml  scalpin_monitor.py  tech_telemetry.jsonl  tmp_check_env.ps1
easybrokers/: README.md  config.json  easybroker_list.py  image_downloader.py  pyproject.toml  test_download.py
easybrokers/easybrokers/properties/: easybrokers_20250902.xlsx
easybrokers/properties/: easybrokers_20250608.xlsx  easybrokers_20250609.xlsx  easybrokers_20250611.xlsx  easybrokers_20250612.xlsx  easybrokers_20250616.xlsx  easybrokers_20250618.xlsx  easybrokers_20250701.xlsx  easybrokers_20250716.xlsx  easybrokers_20250717.xlsx  easybrokers_20250802.xlsx  easybrokers_20250908.xlsx
easybrokers/properties/data/: EB-BO3663.json  EB-BO3705.json  EB-BO3724.json  EB-BO3738.json  EB-BO3756.json  EB-BO3825.json  EB-BP1401.json  EB-BP1415.json  EB-BP1426.json  EB-BP1484.json  EB-BP1519.json  EB-BP1618.json  EB-BP1666.json  EB-BQ3840.json  EB-BQ3897.json  EB-CO7818.json  EB-CR5676.json  EB-CS1816.json  EB-CW1249.json  EB-DA5639.json  EB-DG4294.json  EB-DI3255.json  EB-DI3296.json  EB-EP3734.json  EB-EQ5366.json  EB-EW9608.json  EB-FK1774.json  EB-IA7174.json  EB-IB3725.json  EB-JE0901.json  EB-JN4525.json  EB-JN4603.json  EB-JN8948.json  EB-KT6228.json  EB-LB8465.json  EB-LK0132.json  EB-LL3497.json  EB-LO6644.json  EB-LY5768.json  EB-ML2763.json  (+98 more)
email_collector/: README.md  main.py  pyproject.toml
email_collector/src/email_collector/: main.py
oai_code_evaluator/: README.md  pyproject.toml
oai_code_evaluator/config_samples/: dimensions.yaml  prompt.yaml  ranking.yaml  rewrite.yaml  rules.yaml
oai_code_evaluator/oai_code_evaluator/: cli.py  config_loader.py  evaluator.py  logging_utils.py  schemas.py
oai_code_evaluator/samples/: sample_submission.json
oai_code_evaluator/tests/: test_smoke.py
projects/arbitraje/: Makefile  README.md  USDT  arbitraje.collect.yaml  arbitraje.discovery.yaml  arbitraje.prod.dryrun.yaml  arbitraje.prod.yaml  arbitraje.realista.yaml  arbitraje.relax.yaml  arbitraje.relax_diag.yaml  arbitraje.tuned.yaml  arbitraje.yaml  bootstrap_sdks.py  pyproject.toml  run_long_relax.ps1  sitecustomize.py  swapper.live.dryrun.yaml  swapper.live.yaml  swapper.real.yaml  swapper.yaml  tech_telemetry.jsonl  temp_run_no_inline.yaml  tmp_debug_scan.py  tmp_direct_submit.py  tmp_mexc_one.yaml  tmp_pool_scan_test.py  tmp_pool_test.py  tmp_prod_radar.yaml  tmp_run_1000_inline.yaml  tmp_run_10_fast.yaml  tmp_run_3_inline.yaml  tmp_run_inline_binance_mexc.yaml  tmp_simple_pool.py  tmp_sw_test_prod.yaml  tmp_validate_mexc.yaml  tmp_validate_mexc_dbg.yaml
projects/arbitraje/arbitraje/: __init__.py
projects/arbitraje/canonical/: manifest.json
projects/arbitraje/docs/: flujo_arbitraje.md
projects/arbitraje/scripts/: bf_experiments.py  check_env.py  collect_logs.py  compute_min_costs.py  create_canonical_copies.py  diagnose_bf.py  diagnose_live_graph.py  diagnose_ticker_fetch.py  engine_dbg.py  inspect_bf_payload.py  inspect_bf_payload2.py  measure_swapper.py  print_free_balances.py  print_pair_limits.py  probe_okx_balance.py  run_relax_1000.ps1  validate_env.ps1
projects/arbitraje/sdk/: README.md
projects/arbitraje/src/: _auto_dedent_bf.py  _dump.py  _lead.py  _lead2.py  _lead3.py  _pycheck.py
projects/arbitraje/tests/: conftest.py  test_bf_equivalence_filters.py  test_bf_helpers.py  test_bf_migration.py  test_bf_numba_equivalence.py  test_bf_numba_integration.py  test_bf_regression_profitable.py  test_cli_version.py  test_engine_techniques.py  test_import_canonical.py  test_smoke_tri.py  test_tri_bot.py
projects/arbitraje/tools/: README_DIAG.md  _oneoff_dump_call.py  analyze_graph_dump.py  analyze_run_results.py  bench_techniques.py  bf_numba_impl.py  check_mexc_tickers.py  check_numba.py  compare_direct_vs_scan.py  compute_bf_quantiles.py  compute_bf_quantiles_from_telemetry.py  compute_quantiles_from_file.py  debug_live_mexc_dump.py  debug_scan.py  diag_housekeeping.py  dump_graph_test.py  generate_synth_snapshot.py  inspect_bf.py  inspect_graph_cycle.py  inspect_snapshot_graph.py  parse_telemetry.py  precompute_snapshot.py  print_profile_stats.py  profile_bf.py  recall_test.py  run_bf_array_benchmark.py  run_numba_benchmark.py  run_offline_bf_benchmark.py  run_snapshot_scan.py  run_snapshot_scan_fixed.py  test_bellman_timeout.py  test_inline_bf.py  test_pool_bf.py
projects/real_estate/: README.md  config.json  easybroker_list.py  image_downloader.py  paths.py  pyproject.toml  requirements.json  test_download.py  wiggot_export.py
projects/real_estate/properties/: .auth_wiggot.json
projects/real_estate/reports/: REPORTE_BODEGAS_SOLO_BODEGAS_20260108_160642.md
projects/stopplag/: .gitignore  PROJECT_PLAN.md  PROPUESTA_CLIENTE.md  README.md  pyproject.toml
projects/stopplag/transcripts/: entrevista_completa.md  entrevista_parte_1.txt  (+2 more)
projects/supplier_verifier/: README.md  pyproject.toml
projects/tls_compara_imagenes/: README.md  pyproject.toml
realstate/: README.md  config.json  easybroker_list.py  image_downloader.py  pyproject.toml  test_download.py  wiggot_export.py
realstate/properties/: easybrokers_20250613.xlsx  easybrokers_20250710.xlsx  easybrokers_20250725.xlsx  easybrokers_20250827.xlsx  easybrokers_20250907.xlsx  wiggot.xlsx
telus_compara_audios/: README.md  pyproject.toml
telus_compara_audios/telus_compara_audios/: runner.py
telus_compara_imagenes/: README.md  pyproject.toml
telus_compara_imagenes/telus_compara_imagenes/: runner.py
(+1475 files in other folders)
