[tool.poetry]
name = "dataqbs-monorepo"
version = "1.6.0"
description = "Monorepo tooling (lint, tests, hooks) for dataqbs Python projects"
authors = ["Carlos <you@example.com>"]
license = "MIT"
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
ccxt = "^4.5.11"
pandas = "^2.3.3"
tabulate = "^0.9.0"
binance-sdk-spot = "3.0.0"
python-okx = "0.4.0"
python-binance = "^1.0.30"
mexc-api = "0.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.12.2"
pre-commit = "^3.8.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = [
	"projects/oai_code_evaluator/tests"
]

[tool.ruff]
line-length = 100
target-version = "py311"
# Files and directories that are generated, vendored or not part of active source
exclude = [
	"projects/arbitraje/sdk/**",
	"projects/arbitraje/artifacts/**",
	"projects/real_estate/easybroker_list.py",
	"projects/real_estate/Fabric/**",
	"projects/real_estate/PropertyData/**",
	"projects/email_collector/main.py",
	"projects/arbitraje/tests/**/data/**",
	"projects/arbitraje/**/node_modules/**",
	"projects/**/sdk/**",
	"projects/**/third_party/**",
	"projects/**/vendor/**",
	"projects/**/generated/**",
	"projects/arbitraje/sdk/okx/**",
	"projects/**/artifacts/**",
	"projects/**/tests/**/data/**",
	"**/*.ipynb",
]

[tool.ruff.lint]
# Moved deprecated top-level lint options here to satisfy ruff's new config shape
extend-select = ["I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = [
	"email_collector",
	"oai_code_evaluator",
	"real_estate",
	"telus_compara_audios",
	"telus_compara_imagenes"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dataqbs]
# Semantic engine label for releases (human-friendly)
engine = "3.2"
