[tool.poetry]
name = "realstate-tools"
version = "0.1.0"
description = "Utilities and scripts for real estate data handling"
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "realstate", from = "." }
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.0"
# openpyxl is used by some helper flows in realstate_list.py
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
