[tool.poetry]
name = "telus-compara-imagenes"
version = "0.1.0"
description = "Automatiza comparaciones de calidad de imagen en Multimango (Side by Side) con Playwright"
authors = ["Carlos <you@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
playwright = "^1.55.0"
requests = "^2.32.0"
numpy = ">=1.24,<3"
Pillow = "^10.4.0"

[tool.poetry.scripts]
telus-compare = "telus_compara_imagenes.runner:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
