[tool.poetry]
name = "arbitraje"
version = "0.1.0"
description = "Crypto price arbitrage reporter using CoinGecko public API (no trading)"
authors = ["Your Name <you@example.com>"]
license = "MIT"

packages = [
  { include = "arbitraje", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = "^2.32.0"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
tabulate = "^0.9.0"
ccxt = "^4.4.23"
binance-sdk-spot = "^3.0.0"

[tool.poetry.scripts]
arbitraje-report = "arbitraje.coingecko_arbitrage_report:main"
arbitraje-ccxt = "arbitraje.arbitrage_report_ccxt:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
