[tool.poetry]
name = "arbitraje"
version = "0.3.0"
description = "Crypto price arbitrage scanner using ccxt (BF/tri modes)"
authors = ["Your Name <you@example.com>"]
license = "MIT"

packages = [
  { include = "arbitraje", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = "^2.32.0"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
tabulate = "^0.9.0"
ccxt = "^4.4.23"
binance-sdk-spot = "^3.0.0"
PyYAML = "^6.0.2"
ujson = "^5.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ruff = "^0.12.2"

[tool.ruff]
line-length = 120
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["src/arbitraje"]

[tool.poetry.scripts]
arbitraje-ccxt = "arbitraje.arbitrage_report_ccxt:main"
arbitraje-tri = "arbitraje.tri_bot:main"
swapper = "arbitraje.swapper:_main_cli"
swaper = "arbitraje.swapper:_main_cli"  # backward-compat command name

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
