[tool.poetry]
name = "realstate-tools"
version = "0.1.0"
description = "Utilities and scripts for real estate data handling"
authors = ["Your Name <you@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.0"
# openpyxl is used by some helper flows in realstate_list.py
openpyxl = "^3.1.5"
playwright = "^1.55.0"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
wiggot-export = "wiggot_export:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
