[tool.poetry]
name = "tls-compara-imagenes"
version = "0.1.0"
description = "Automatiza comparaciones de calidad de imagen en Multimango (Side by Side) con Playwright"
authors = ["Carlos <you@example.com>"]
license = "MIT"

packages = [
    { include = "tls_compara_imagenes", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
playwright = "^1.55.0"
requests = "^2.32.0"
numpy = ">=1.24,<3"
Pillow = "^10.4.0"

[tool.poetry.scripts]
# Primary new script
tls-compare-images = "tls_compara_imagenes.runner:main"
# Deprecated legacy alias for backward compatibility; prints a warning then delegates.
telus-compare = "tls_compara_imagenes.deprecated:legacy_entrypoint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
